--- a/index.html
+++ b/index.html
@@ -91,5 +91,38 @@
     <div class="servetable">
 
     </div>
+    <div class="footer">
+        <div class="footone">
+            <strong>Address:</strong>
+            <Address>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur sapiente eligendi, aliquid corporis rerum omnis!</Address>
+            <br/>
+            <strong>Phone Number:</strong>
+            <em>+201 2028 2839 2201</em>
+        </div>
+        <div class="footone">
+            <strong>Address:</strong>
+            <Address>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur sapiente eligendi, aliquid corporis rerum
+                omnis!</Address>
+            <br />
+            <strong>Phone Number:</strong>
+            <em>+201 2028 2839 2201</em>
+        </div>
+        <div class="footone">
+            <strong>Address:</strong>
+            <Address>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur sapiente eligendi, aliquid corporis rerum
+                omnis!</Address>
+            <br />
+            <strong>Phone Number:</strong>
+            <em>+201 2028 2839 2201</em>
+        </div>
+        <div class="footone">
+            <strong>Address:</strong>
+            <Address>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur sapiente eligendi, aliquid corporis rerum
+                omnis!</Address>
+            <br />
+            <strong>Phone Number:</strong>
+            <em>+201 2028 2839 2201</em>
+        </div>
+    </div>
 </body>
 </html>
