--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <hr/>
     <div class="containerabout">
         <div class="leftside">
+            <h2>Welcome To Arora Sweets!</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto consequatur quo odit provident vel est aliquid ipsum, consequuntur rem dolores at labore similique hic quia ex eos eaque laborum doloremque amet itaque vero culpa magnam delectus. Perferendis beatae officia mollitia minima!</p>
             <br/>
             <br/>
