--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
     <div class="services">
         <div class="card">
             <img src="Photo3.jpg" alt="">
-            <h2>Rajasthani Foods</h2>
+            <h2>Arora Foods</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate doloremque consectetur quas repudiandae dignissimos explicabo, maiores assumenda mollitia optio esse facere eius fugit. Consequatur ipsam, aperiam ea sint at rerum amet.</p>
         </div>
         <div class="card">
             <img src="Photo6.jpg" alt="">
-            <h2>Rajasthani Foods</h2>
+            <h2>Arora Foods</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate doloremque consectetur quas repudiandae
                 dignissimos explicabo, maiores assumenda mollitia optio esse facere eius fugit. Consequatur ipsam, aperiam ea
                 sint at rerum amet.</p>
@@ -68,21 +68,21 @@
         
         <div class="card">
             <img src="Photo2.jpg" alt="">
-            <h2>Rajasthani Foods</h2>
+            <h2>Arora Foods</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate doloremque consectetur quas repudiandae
                 dignissimos explicabo, maiores assumenda mollitia optio esse facere eius fugit. Consequatur ipsam, aperiam ea
                 sint at rerum amet.</p>
         </div>
         <div class="card">
             <img src="Photo4.jpg" alt="">
-            <h2>Rajasthani Foods</h2>
+            <h2>Arora Foods</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate doloremque consectetur quas repudiandae
                 dignissimos explicabo, maiores assumenda mollitia optio esse facere eius fugit. Consequatur ipsam, aperiam ea
                 sint at rerum amet.</p>
         </div>
         <div class="card">
             <img src="Photo6.jpg" alt="">
-            <h2>Rajasthani Foods</h2>
+            <h2>Arora Foods</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate doloremque consectetur quas repudiandae
                 dignissimos explicabo, maiores assumenda mollitia optio esse facere eius fugit. Consequatur ipsam, aperiam ea
                 sint at rerum amet.</p>
