--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <div class="navbar" id="navbar">
             <a href="#aboutus">Home</a>
             <a href="#service">Services</a>
+            <a href="#shop">Shopping</a>
             <a href="#gallary">Gallary</a>
             <a href="#contact">Contacts</a>
         </div>
